# Cap-Table-Generator

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_MULTI_STEP_TASKS.md  BUG_FIX_REF_ERROR.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  ROUND_BASED_ARCHITECTURE_IMPLEMENTATION.md  app.py  build.sh  cap_table_generator.py  cap_table_schema.json  cap_table_schema.py  demo.py  deterministic_layout_map.py  excel_generator.py  formula_resolver.py  pyproject.toml  pytest.ini  requirements.txt  run_example.py  run_wizard.py  sample_data_generator.py  setup.py  vercel.json
api/: app.py  generate-excel-python.py  generate-excel.py
docs/: API_Enhancements_Summary.md  API_REFERENCE.md  ARCHITECTURE_CAP_TABLE_PROGRESSION_CENTRIC.md  Excel_Export_Architecture.md  Implementation_Recommendations.md  Implementation_Status.md  JSON_INPUT_GUIDE.md  Knowledge Base.md  OpenAI_Integration_Guide.md  Optimization_Summary.md  README.md  SCHEMA_REFERENCE.md  SHARE_ISSUANCE_METHODS.md  Schema_Changes_for_LLM_Generation.md  State_Management_Analysis.md  System Prompt.md  VALUATION_BASED_CALCULATIONS.md  Vercel_Deployment.md  XLSX Output.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  CORE_LIBRARY.md
docs/archive/: Knowledge Base.md
docs/archive/implementation/: ADDITIONAL_FEATURES_SUMMARY.md  AUTO_PRE_ROUND_SHARES_IMPLEMENTATION.md  DELETION_FIX_SUMMARY.md  EXCEL_DATA_FLOW_ARCHITECTURE.md  EXCEL_FORMULA_LINKING_ANALYSIS.md  EXCEL_LINKING_QUICK_REFERENCE.md  FINAL_TEST_STATUS.md  FORMULA_LINKING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_VALUATION.md  PRE_VS_POST_MONEY_COMPARISON.md  PROJECT_COMPLETION_SUMMARY.md  VALUATION_BASIS_CALCULATIONS.md
docs/archive/refactoring/: CURRENT_STATUS.md  LLM_SERVICE_REFACTOR_PLAN.md  PHASE_1_COMPLETE_SUMMARY.md  PHASE_1_STATUS.md  PHASE_2_2_COMPLETE.md  PHASE_2_OUTLINE.md  PHASE_2_PROGRESS.md  PHASE_2_SESSION_COMPLETE.md  REFACTORING_ALL_PHASES_COMPLETE.md  REFACTORING_COMPLETE_CORE_ONLY.md  (+14 more)
docs/guides/: CONTRIBUTING.md  DEVELOPMENT_SETUP.md  TESTING_GUIDE.md
examples/: anti_dilution_test.json  chatgpt.json  round_based_example.json  sample_complex_captable.json  sample_simple_captable.json
fastapi/: main.py  requirements.txt
fastapi/api/: __init__.py
fastapi/captable/: __init__.py  constants.py  errors.py  generator.py  schema.py  types.py
scripts/: generate_excel.py
src/captable/: __init__.py  dlm.py  excel.py  formulas.py  generator.py  schema.py  validation.py
src/server/: main.py  wizard.py
tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_cap_table.py  test_excel_generator.py  test_integration.py  test_validation.py  test_validation_round_based.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  sample_cap_tables.py
tests/integration/: __init__.py  test_excel_generation.py
tests/unit/: __init__.py  test_validation.py
tests/utils/: __init__.py  comparison_tools.py  excel_reader.py  formula_validator.py  reference_checker.py
webapp/: BACKEND_FIX.md  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION_SUMMARY.md  __init__.py  package-lock.json  package.json  vercel.json
webapp/api/: generate-excel-python.py  pyproject.toml  requirements.txt
webapp/api/captable/: __init__.py  dlm.py  generator.py
webapp/api/captable/excel/: __init__.py  excel_generator.py  formatters.py
webapp/api/captable/excel/sheet_generators/: progression_sheet.py
webapp/api/captable/formulas/: interest.py  tsm.py
webapp/api/captable/schemas/: prompt.md
webapp/api/captable/validation/: feo_validator.py  validator.py
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/backend/: __init__.py  config.py  main.py  models.py  requirements.txt
webapp/components/: currency-dialog.tsx  field-with-help.tsx  holder-dialog.tsx  holder-selector.tsx  holders-manager.tsx  instrument-card.tsx  instrument-dialog.tsx  json-import-dialog.tsx  json-preview.tsx  pro-rata-card.tsx  pro-rata-exercise-section.tsx  round-form-old.tsx  round-form.tsx  round-instruments-section.tsx  round-parameters-section.tsx  rounds-summary.tsx  sidebar.tsx  smooth-scroll.tsx
webapp/frontend/: package-lock.json  package.json
webapp/lib/: formatters.ts  use-holders.ts  use-local-storage.ts  use-rounds.ts  use-undo-redo.ts  use-validation.ts  utils.ts  validation.ts
webapp/tests/: __init__.py  test_e2e.py
webapp/types/: cap-table.ts
(+123 files in other folders)
