[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captable-serverless"
version = "1.0.0"
description = "Serverless function dependencies for captable generator"
requires-python = ">=3.9"
dependencies = [
    "xlsxwriter",
    "jsonschema",
]

